force-app/main/default/objects/Contact/fields/OpenInvoices__c.field-meta.xml
<CustomField>
    <fullName>OpenInvoices__c</fullName>
    <label>Open Invoices</label>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.ContactId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>