force-app/main/default/objects/Contact/fields/PastInvoices__c.field-meta.xml
<CustomField>
    <fullName>PastInvoices__c</fullName>
    <label>Past Invoices</label>
    <summaryForeignKey>Invoice__c.ContactId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>