force-app/main/default/objects/Contact/fields/TotalAmountPaid__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountPaid__c</fullName>
    <label>Total Amount Paid</label>
    <summarizedField>Invoice__c.Price__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.ContactId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>